--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version_minecraft=1.12.2
-version_forge=14.23.4.2725
-version_mcp=snapshot_20171007
+version_forge=14.23.4.2748
+version_mcp=stable_39
