--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,10 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            url = "http://files.minecraftforge.net/maven"
+parent.sourceSets {
+    api {
+        java {
+            srcDir project.projectDir.path + "/src/main/java"
+        }
+        resources {
+            srcDir project.projectDir.path + "/src/main/resources"
         }
     }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-    }
-}
-
-apply plugin: 'net.minecraftforge.gradle.forge'
-
-group = "com.headlamp-games"
-archivesBaseName = "railcraft-api"
-
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-
-dependencies {
-    provided "org.jetbrains:annotations:15.0"
-}
-
-minecraft {
-    version = project.version_minecraft + "-" + project.version_forge
-    runDir = "run"
-
-    mappings = project.version_mcp.replace("-", "_")
-
-    replace '@VERSION@', project.version
-    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-}
-
-compileJava {
-    options.compilerArgs += '-proc:none'
 }
